# PUBGAssistant-cpp

./: .gitignore  .vsconfig  CMakeLists.txt  CMakePresets.json  PORTING_STATUS.md  PUBGAssistant-cpp.slnx  PUBGAssistant-cpp.vcxproj  PUBGAssistantCpp.vcxproj  README.md  SESSION_NOTES.md  vcpkg.json  使用说明.md
cmake/: copy_optional_file.cmake  package_runtime.cmake
config/: config.json  map_data.json  recoil_settings.json  special_assistants.json
config/regions/: 1920_1080.json
include/: App.hpp  Ballistics.hpp  BuildConfig.hpp  C4Assistant.hpp  Common.hpp  Config.hpp  ElevationRadar.hpp  EquipmentDetector.hpp  GestureIdentifier.hpp  HotkeyManager.hpp  InputController.hpp  LargeMapRadar.hpp  MapPointAssistant.hpp  MinimapRadar.hpp  MortarAutoAim.hpp  MortarMountDetector.hpp  OverlayWindow.hpp  RecoilControl.hpp  RegionManager.hpp  ResourcePaths.hpp  ScopeMotionTracker.hpp  ScreenCapture.hpp  SpecialAssistants.hpp  StatusHud.hpp  TemplateMatcher.hpp  ThrowablesAssistant.hpp  WeaponDetector.hpp
include/ui/: CurveEditor.hpp  DisplaySettingsWindow.hpp  MainWindow.hpp  RecoilDebuggerWindow.hpp  RegionCalibrationOverlay.hpp  RoundedButton.hpp  ScaleCalibrationWindow.hpp  SpecialWeaponDebuggerWindow.hpp  Theme.hpp
resources/: PUBGAssistantCpp.manifest  app_icon.rc
src/: App.cpp  Ballistics.cpp  C4Assistant.cpp  Config.cpp  ElevationRadar.cpp  EquipmentDetector.cpp  GestureIdentifier.cpp  HotkeyManager.cpp  InputController.cpp  LargeMapRadar.cpp  MapPointAssistant.cpp  MinimapRadar.cpp  MortarAutoAim.cpp  MortarMountDetector.cpp  OverlayWindow.cpp  RecoilControl.cpp  RegionManager.cpp  ResourcePaths.cpp  ScopeMotionTracker.cpp  ScreenCapture.cpp  SpecialAssistants.cpp  StatusHud.cpp  TemplateMatcher.cpp  ThrowablesAssistant.cpp  WeaponDetector.cpp  main.cpp
src/ui/: CurveEditor.cpp  DisplaySettingsWindow.cpp  MainWindow.cpp  RecoilDebuggerWindow.cpp  RegionCalibrationOverlay.cpp  RoundedButton.cpp  ScaleCalibrationWindow.cpp  SpecialWeaponDebuggerWindow.cpp  Theme.cpp
tools/: create_pnt_template.py  region_preview_overlay.py
